# WorkspaceCleaningRobot

./: .gitignore  README.md
ros_1/catkin_ws/src/my_package/: CMakeLists.txt  package.xml
ros_1/catkin_ws/src/my_package/config/: example_controller.yaml  joint_limits.yaml  panda.srdf  person_controllers.yaml  ros_controllers_alternative.yaml  simple_moveit_controllers.yaml
ros_1/catkin_ws/src/my_package/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  gazebo_moveit.launch  move_group.launch  moveit_rviz.launch  old_gazebo.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  panda_gazebo.launch  panda_gazebo_moveit.launch  panda_gazebo_moveit_old.launch  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  setup_environment.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  test_launch.launch
ros_1/catkin_ws/src/my_package/rviz/: base_config.rviz  config_file.rviz  verbose_config_file.rviz
ros_1/catkin_ws/src/my_package/scripts/: despawn_dirt.sh  despawn_person.sh  dirt_manager.py  robot_movement.py  robot_movement_old.py  spawn_dirt.sh  spawn_person.sh  test_hands_detection.py  test_hands_detection_old_1.py  test_moveit.py
ros_1/catkin_ws/src/my_package/src/: background_matting.py  requirements.txt  test.py  test_camera.py  test_camera_pubsub.py  test_camera_service.py  test_dirty_detection.py  test_dirty_detection_pubsub.py  (+4 more)
(+63 files in other folders)
